# HTmag

./: .gitattributes  CMakeLists.txt  README.md  demo.cpp
I-love-Q/: I-love-Qrot.nb
I-love-Q/eos/: abh2.table  apr.m  hsdd2.m  hsfsg.m  hssfho.m
debug/eos/: eos_HSDD2.d  eos_HSFSG.d  eos_HSSFHo.d
include/: ISS_O11_Series.hpp  Mag_Rot_Star_O2O1.hpp  Mag_Star_O1.hpp  Mag_Star_O2.hpp  Rot_Star_O1.hpp  Star.hpp  Static_Star.hpp  Static_Star_ISS.hpp  TVII_O11_Series.hpp
source/: Star.cpp
source/Mag_Rot_Star_O2O1/: Mag_Rot_Star_O2O1.cpp  Mag_Rot_Star_O2O1_comp_l1.cpp  Mag_Rot_Star_O2O1_comp_l3.cpp  Mag_Rot_Star_O2O1_global.cpp  Mag_Rot_Star_O2O1_metric.cpp  Mag_Rot_Star_O2O1_sources.cpp  Mag_Rot_Star_O2O1_tests.cpp
source/Mag_Star_O1/: Mag_Star_O1.cpp  Mag_Star_O1_comp.cpp  Mag_Star_O1_fields.cpp  Mag_Star_O1_global.cpp
source/Mag_Star_O2/: Mag_Star_O2.cpp  Mag_Star_O2_comp_l0.cpp  Mag_Star_O2_comp_l1.cpp  Mag_Star_O2_comp_l2.cpp  Mag_Star_O2_global.cpp  Mag_Star_O2_metric.cpp  Mag_Star_O2_metric_l0.cpp.cpp  Mag_Star_O2_metric_l1.cpp.cpp  Mag_Star_O2_metric_l2.cpp.cpp  Mag_Star_O2_tests.cpp
source/O11_Series/: ISS_O11_Series.cpp  TVII_O11_Series.cpp
source/Rot_Star/: Rot_Star_O1.cpp  Rot_Star_O1_comp.cpp  Rot_Star_O1_global.cpp  Rot_Star_O1_metric.cpp  Rot_Star_O1_tests.cpp
source/Static_Star/: Static_Star.cpp  Static_Star_ISS.cpp  Static_Star_global.cpp  Static_Star_metric.cpp  Static_Star_tests.cpp  Static_Star_thermo.cpp  Static_Star_tov.cpp
